Fixes #279 - Allow minisign dependency  to be optionally excluded at compile time

--- a/lucetc/Cargo.toml
+++ b/lucetc/Cargo.toml
@@ -43,3 +43,6 @@ human-size = "0.4"
 parity-wasm = "0.38"
 minisign = "0.5.11"
 memoffset = "0.5.1"
+
+[features]
+signature_checking = ["lucet-module/signature_checking"]
