--- a/lucet-module/Cargo.toml
+++ b/lucet-module/Cargo.toml
@@ -17,6 +17,10 @@ serde_json = "1.0"
 bincode = "1.1.4"
 num-derive = "0.2"
 num-traits = "0.2"
-minisign = "0.5.11"
+minisign = { version = "0.5.11", optional = true }
 object = "0.12"
 byteorder = "1.3"
+
+[features]
+default = ["signature_checking"]
+signature_checking = ["minisign"]
