--- a/lucet-runtime/Cargo.toml
+++ b/lucet-runtime/Cargo.toml
@@ -31,6 +31,9 @@ tempfile = "3.0"
 # only used for tests
 cc = "1.0"
 
+[features]
+signature_checking = ["lucet-module/signature_checking"]
+
 [lib]
 name = "lucet_runtime"
 crate-type = ["rlib", "staticlib", "cdylib"]
