Include CPU features in module data (#351)
* write cpu features into modules and verify compatibility when loading

* build spectests to ward away evil bit gremlins

--- a/lucetc/Cargo.toml
+++ b/lucetc/Cargo.toml
@@ -40,6 +40,7 @@ human-size = "0.4"
 parity-wasm = "0.38"
 minisign = "0.5.11"
 memoffset = "0.5.1"
+raw-cpuid = "7.0.3"
 
 [features]
 signature_checking = ["lucet-module/signature_checking"]
