add `--target` option to lucetc
Currently, `lucetc` assumes that the machine that it's compiling
for (the "target") is the same as the machine on which `lucetc` is
running ("the host").  While this is a reasonable assumption to make,
many future uses of `lucetc` may require these machines to be distinct.
Towards that end, let's introduce a `--target` option for specifying the
machine `lucetc` is supposed to be generating code for, and thread that
information through to all the places that require it.

--- a/lucet-wasi-sdk/Cargo.toml
+++ b/lucet-wasi-sdk/Cargo.toml
@@ -13,4 +13,5 @@ edition = "2018"
 failure = "0.1"
 lucetc = { path = "../lucetc", version = "0.1.1" }
 lucet-module = { path = "../lucet-module", version = "0.1.1" }
+target-lexicon = "0.8.1"
 tempfile = "3.0"
