Rename lucet-wasi, lucet-runtime, lucet-runtime-internals and lucet-module to clearly mark these are forks

--- a/benchmarks/lucet-benchmarks/Cargo.toml
+++ b/benchmarks/lucet-benchmarks/Cargo.toml
@@ -12,10 +12,10 @@ edition = "2018"
 [dependencies]
 criterion = "0.2"
 lucetc = { path = "../../lucetc" }
-lucet-module = { path = "../../lucet-module" }
-lucet-runtime = { path = "../../lucet-runtime" }
-lucet-runtime-internals = { path = "../../lucet-runtime/lucet-runtime-internals" }
-lucet-wasi = { path = "../../lucet-wasi" }
+lucet-module = { path = "../../lucet-module", package="lucet-module-wasmsbx" }
+lucet-runtime = { path = "../../lucet-runtime", package = "lucet-runtime-wasmsbx" }
+lucet-runtime-internals = { path = "../../lucet-runtime/lucet-runtime-internals", package = "lucet-runtime-internals-wasmsbx" }
+lucet-wasi = { path = "../../lucet-wasi", package = "lucet-wasi-wasmsbx" }
 lucet-wasi-sdk = { path = "../../lucet-wasi-sdk" }
 nix = "0.13"
 num_cpus = "1.0"
