--- a/lucet-idl/lucet-idl-test/Cargo.toml
+++ b/lucet-idl/lucet-idl-test/Cargo.toml
@@ -14,8 +14,8 @@ path = "src/main.rs"
 [dependencies]
 lucet-idl = { path = "../" }
 lucetc = { path = "../../lucetc" }
-lucet-runtime = { path = "../../lucet-runtime" }
-lucet-wasi = { path = "../../lucet-wasi" }
+lucet-runtime = { path = "../../lucet-runtime", package = "lucet-runtime-wasmsbx" }
+lucet-wasi = { path = "../../lucet-wasi", package = "lucet-wasi-wasmsbx" }
 lucet-wasi-sdk = { path = "../../lucet-wasi-sdk" }
 proptest = "0.9.6"
 tempfile = "3.0"
