--- a/lucet-idl/lucet-idl-test/resources/rust_host/Cargo.toml
+++ b/lucet-idl/lucet-idl-test/resources/rust_host/Cargo.toml
@@ -10,8 +10,8 @@ path = "src/main.rs"
 
 [dependencies]
 lucet-idl = { path = "../../../" }
-lucet-runtime = { path = "../../../../lucet-runtime" }
-lucet-wasi = { path = "../../../../lucet-wasi" }
+lucet-runtime = { path = "../../../../lucet-runtime", package = "lucet-runtime-wasmsbx" }
+lucet-wasi = { path = "../../../../lucet-wasi", package = "lucet-wasi-wasmsbx" }
 failure = "0.1"
 log = "0.4"
 env_logger = "0.6"
