--- a/lucet-wasi-sdk/Cargo.toml
+++ b/lucet-wasi-sdk/Cargo.toml
@@ -12,6 +12,6 @@ edition = "2018"
 [dependencies]
 failure = "0.1"
 lucetc = { path = "../lucetc", version = "0.1.1" }
-lucet-module = { path = "../lucet-module", version = "0.1.1" }
+lucet-module = { path = "../lucet-module", version = "0.1.1", package="lucet-module-wasmsbx" }
 target-lexicon = "0.8.1"
 tempfile = "3.0"
