--- a/lucet-analyze/Cargo.toml
+++ b/lucet-analyze/Cargo.toml
@@ -13,4 +13,4 @@ edition = "2018"
 goblin=">=0.0.23"
 byteorder="1.2.1"
 colored="1.6.1"
-lucet-module = { path = "../lucet-module", version = "0.1.1" }
+lucet-module = { path = "../lucet-module", version = "0.1.1", package="lucet-module-wasmsbx" }
