--- a/lucet-module/Cargo.toml
+++ b/lucet-module/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "lucet-module"
+name = "lucet-module-wasmsbx"
 version = "0.1.1"
 description = "A structured interface for Lucet modules"
 homepage = "https://github.com/fastly/lucet"
