--- a/lucet-runtime/lucet-runtime-internals/Cargo.toml
+++ b/lucet-runtime/lucet-runtime-internals/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "lucet-runtime-internals"
+name = "lucet-runtime-internals-wasmsbx"
 version = "0.1.1"
 description = "Pure Rust runtime for Lucet WebAssembly toolchain (internals)"
 homepage = "https://github.com/fastly/lucet"
@@ -10,7 +10,7 @@ authors = ["Lucet team <lucet@fastly.com>"]
 edition = "2018"
 
 [dependencies]
-lucet-module = { path = "../../lucet-module", version = "0.1.1" }
+lucet-module = { path = "../../lucet-module", version = "0.1.1", package="lucet-module-wasmsbx" }
 
 bitflags = "1.0"
 bincode = "1.1.4"
