--- a/lucet-runtime/lucet-runtime-tests/Cargo.toml
+++ b/lucet-runtime/lucet-runtime-tests/Cargo.toml
@@ -18,8 +18,8 @@ test = false
 failure = "0.1"
 lazy_static = "1.1"
 tempfile = "3.0"
-lucet-module = { path = "../../lucet-module", version = "0.1.1" }
-lucet-runtime-internals = { path = "../lucet-runtime-internals", version = "0.1.1" }
+lucet-module = { path = "../../lucet-module", version = "0.1.1", package="lucet-module-wasmsbx" }
+lucet-runtime-internals = { path = "../lucet-runtime-internals", version = "0.1.1", package = "lucet-runtime-internals-wasmsbx" }
 lucet-wasi-sdk = { path = "../../lucet-wasi-sdk", version = "0.1.1" }
 lucetc = { path = "../../lucetc", version = "0.1.1" }
 
