--- a/lucet-runtime/Cargo.toml
+++ b/lucet-runtime/Cargo.toml
@@ -10,7 +10,7 @@ authors = ["Lucet team <lucet@fastly.com>"]
 edition = "2018"
 
 [dependencies]
-libc = "=0.2.59"
+libc = "0.2.65"
 lucet-runtime-internals = { path = "lucet-runtime-internals", version = "0.1.1", package = "lucet-runtime-internals-wasmsbx" }
 lucet-module = { path = "../lucet-module", version = "0.1.1", package="lucet-module-wasmsbx" }
 num-traits = "0.2"
