--- a/lucet-runtime/lucet-runtime-internals/Cargo.toml
+++ b/lucet-runtime/lucet-runtime-internals/Cargo.toml
@@ -17,7 +17,7 @@ bincode = "1.1.4"
 byteorder = "1.3"
 failure = "0.1"
 lazy_static = "1.1"
-libc = "=0.2.59"
+libc = "0.2.65"
 libloading = "0.5"
 memoffset = "0.5.1"
 nix = "0.13"
@@ -25,13 +25,6 @@ num-derive = "0.3"
 num-traits = "0.2"
 xfailure = "0.1"
 raw-cpuid = "7.0.3"
-
-# This is only a dependency to ensure that other crates don't pick a newer version as a transitive
-# dependency. `0.1.3 < getrandom <= 0.1.6` cause `lazy_static` to pull in spinlock implementations
-# of concurrency primitives, which for unknown reasons cause our signal handling code to
-# nondeterministically segfault. The maintainers have since removed the `lazy_static` dependency
-# from `getrandom`, but until a new release is cut, this keeps it on a safe version.
-getrandom = "=0.1.3"
 
 [dev-dependencies]
 byteorder = "1.2"
