Re-add the lucet-wasi runner as a separate package

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = [
   "lucet-spectest",
   "lucet-wasi",
   "lucet-wasi-fuzz",
+  "lucet-wasi-runner",
   "lucet-wasi-sdk",
   "lucetc",
   "sightglass",
